--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
   {% csrf_token %}
   <title>Eventico</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
   <style>
     .indicator {
       position: absolute;
