--- a/eventicoUI/src/app/events/new-event/new-event.component.html
+++ b/eventicoUI/src/app/events/new-event/new-event.component.html
@@ -1,4 +1,3 @@
-<ngx-loading [show]="loading" ></ngx-loading>
 <mat-horizontal-stepper>
   <mat-step label="Setup Event Info">
     <mat-card class="new-event-card">
@@ -71,7 +70,7 @@
           </mat-form-field>
           <mat-form-field class="half-width">
             <mat-select placeholder="Select Event venue" [(value)]="event.EventVenueId"  name="EventVenue" >
-              <mat-option *ngFor="let eventVenue of eventVenues" value="{{eventVenue.Id}}" >{{eventVenue.Name}}</mat-option>
+              <mat-option *ngFor="let eventVenue of eventVenues" value="{{eventVenue.Id}}" >{{eventVenue.location.Name}}</mat-option>
             </mat-select>
           </mat-form-field>
       </mat-card-content>
@@ -84,23 +83,64 @@
   </mat-step>
 
   <mat-step label="Setup Banners" *ngIf="event.Id != null">
-    <mat-card>
-      <mat-card-content>
-        <img [src]="this.event.images['banner'].url" onerror="this.src='https://algovent-s3-static.s3.amazonaws.com/eventico/media/default_bannger.jpg'">
-      </mat-card-content>
-      <mat-divider></mat-divider>
-      <mat-card-actions>
-        <input type="file"   (change)="handleFileInput($event.target.files)">
-        <button mat-button  *ngIf="this.event.images['banner'].url != ''" color="warning"> REMOVE</button>
-      </mat-card-actions>
+    <mat-toolbar>
+      <mat-toolbar-row>
+        <span class="tollbar-splitter"></span>
+        <button  mat-button (click)="ImageInput.click()" >UPLOAD IMAGE</button>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <div class="spacer"></div>
+    <mat-card class="banner-card">
+      <img class="boking_banner responsive center" [src]="this.event.images['banner'].url">
     </mat-card>
-  <div>
-    <button  mat-button matStepperPrevious>BACK</button>
-    <button  mat-button matStepperNext >NEXT</button>
-  </div>
+    <div class="spacer"></div>
+    <div>
+      <button  mat-button matStepperPrevious>BACK</button>
+      <button  mat-button matStepperNext >NEXT</button>
+      <input type="file" hidden="true" #ImageInput (change)="handleFileInput($event.target.files)">
+    </div>
   </mat-step>
 
-  <mat-step label="Mark Unavailability" *ngIf="event.LayoutType == 'box' && event.Id != null">
+  <mat-step label="Setup Pricing" *ngIf="event.Id != null">
+    <mat-toolbar class="layout-create-toolbar">
+      <mat-toolbar-row>
+        <form class="new-event-form" #addPricingForm="ngForm" (ngSubmit)="addPricing(addPricingForm)">
+
+          <mat-form-field primary>
+            <input matInput  type="text" placeholder="Label" #Label="ngModel" [(ngModel)]="addPricingFormData.label" name="Label" >
+          </mat-form-field>
+          <mat-form-field primary>
+            <input matInput type="number" placeholder="Value" #Value="ngModel" [(ngModel)]="addPricingFormData.value" name="Value" >
+          </mat-form-field>
+          <mat-form-field primary>
+            <input matInput type="text" placeholder="Description" #Desc="ngModel" [(ngModel)]="addPricingFormData.desc" name="Desc" >
+          </mat-form-field>
+          <button mat-button type="submit" color="primary" >Add</button>
+        </form>
+        <span class="tollbar-splitter"></span>
+
+      </mat-toolbar-row>
+    </mat-toolbar>
+
+    <mat-list [style.padding-bottom]="'300px'">
+      <mat-list-item *ngFor="let price of eventLayout.priceList">
+        <mat-icon class="pricing_color_icon" matListIcon [(colorPicker)]="price.color" [style.color]="price.color">event_seat</mat-icon>
+        <h3 matLine> {{ price.label }} </h3>
+        <p matLine>
+          <span> {{ price.value }} </span>
+          <span class="demo-2"> -- {{ price.desc }} </span>
+        </p>
+
+        <button *ngIf="price.name != 'default'" mat-icon-button><mat-icon>delete</mat-icon></button>
+      </mat-list-item>
+    </mat-list>
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button matStepperNext>Next</button>
+    </div>
+  </mat-step>
+
+  <mat-step label="UPDATE LAYOUT" *ngIf="eventLayout.layout_type == 'box' && event.Id != null">
     <mat-toolbar class="layout-create-toolbar">
       <mat-toolbar-row>
         <form class="new-event-form" #markNAForm="ngForm" (ngSubmit)="markNA(markNAForm)">
@@ -145,76 +185,7 @@
 
       </mat-toolbar-row>
     </mat-toolbar>
-    <mat-card class="layout-card scrollable-content">
-      <mat-card-content>
-        <table *ngFor="let group of layout_groups">
-          <mat-divider></mat-divider>
-          <tr *ngFor="let row of group.rows">
-            <td class="row-name-col">
-              <button class="seat-button" mat-icon-button>{{row.name}}</button>
-            </td>
-            <td *ngFor="let col of row.cols" class="seat-col">
-              <button [matTooltip]="col.number" class="seat-button" [disabled]="eventLayout.typeActionDisabled[col.type]"  mat-icon-button><mat-icon [style.color]="eventLayout.typeColors[col.type]" aria-label="Event Seat">{{ eventLayout.typeIcons[col.type] }}</mat-icon></button>
-            </td>
-          <tr>
-          <tr *ngIf="group != null && group.rows != null && group.rows[0] != null">
-            <td class="row-name-col">
-              <button class="seat-button" mat-icon-button>{{ group.name }}</button>
-            </td>
-            <td *ngFor="let col of group.rows[0].cols; let m = index" class="seat-col">
-              <button class="seat-button" mat-icon-button>{{ m }}</button>
-            </td>
-          <tr>
-        </table>
-        <div class="screen-div">SCREEN HERE</div>
-      </mat-card-content>
-    </mat-card>
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button matStepperNext>Next</button>
-    </div>
-  </mat-step>
-
-  <mat-step label="Setup Pricing" *ngIf="event.Id != null">
-    <mat-toolbar class="layout-create-toolbar">
-      <mat-toolbar-row>
-        <form class="new-event-form" #addPricingForm="ngForm" (ngSubmit)="addPricing(addPricingForm)">
-
-          <mat-form-field primary>
-            <input matInput  type="text" placeholder="Label" #Label="ngModel" [(ngModel)]="addPricingFormData.label" name="Label" >
-          </mat-form-field>
-          <mat-form-field primary>
-            <input matInput type="number" placeholder="Value" #Value="ngModel" [(ngModel)]="addPricingFormData.value" name="Value" >
-          </mat-form-field>
-          <mat-form-field primary>
-            <input matInput type="text" placeholder="Description" #Desc="ngModel" [(ngModel)]="addPricingFormData.desc" name="Desc" >
-          </mat-form-field>
-          <button mat-button type="submit" color="primary" >Add</button>
-        </form>
-        <span class="tollbar-splitter"></span>
-
-      </mat-toolbar-row>
-    </mat-toolbar>
-
-    <mat-list>
-      <mat-list-item *ngFor="let price of eventLayout.priceList">
-        <mat-icon class="pricing_color_icon" matListIcon [(colorPicker)]="price.color" [style.color]="price.color">event_seat</mat-icon>
-        <h3 matLine> {{ price.label }} </h3>
-        <p matLine>
-          <span> {{ price.value }} </span>
-          <span class="demo-2"> -- {{ price.desc }} </span>
-        </p>
-
-        <button *ngIf="price.name != 'default'" mat-icon-button><mat-icon>delete</mat-icon></button>
-      </mat-list-item>
-    </mat-list>
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button matStepperNext>Next</button>
-    </div>
-  </mat-step>
-
-  <mat-step label="Mark Pricing" *ngIf="eventLayout.layout_type == 'box' && event.Id != null">
+    <div class="spacer"></div>
     <mat-toolbar class="layout-create-toolbar">
       <mat-toolbar-row>
         <form class="new-event-form" #markPricingForm="ngForm" (ngSubmit)="markPricing(markPricingForm)">
@@ -263,6 +234,7 @@
         <span class="tollbar-splitter"></span>
       </mat-toolbar-row>
     </mat-toolbar>
+    <div class="spacer"></div>
     <mat-card class="layout-card scrollable-content">
       <mat-card-content>
         <table *ngFor="let group of layout_groups">
@@ -285,35 +257,15 @@
             </td>
           <tr>
         </table>
-        <div class="screen-div">SCREEN HERE</div>
       </mat-card-content>
     </mat-card>
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button matStepperNext>Next</button>
+    <div class="spacer"></div>
+    <div class="screen-container">
+      <div style="text-align: center" class="screen-div">SCREEN HERE</div>
     </div>
-  </mat-step>
-
-  <mat-step label="Confirm Details" *ngIf="event.Id != null">
-    <mat-card class="layout-card scrollable-content">
-      <mat-card-content>
-        <table *ngFor="let group of layout_groups" disabled>
-          <tr *ngFor="let row of group.rows">
-            <td class="row-name-col">
-              <button class="seat-button" mat-icon-button>{{row.name}}</button>
-            </td>
-            <td *ngFor="let col of row.cols" class="seat-col">
-              <button *ngIf="col.type != 'active'" [matTooltip]="col.number" class="seat-button" disabled  mat-icon-button><mat-icon [style.color]="eventLayout.typeColors[col.type]" aria-label="Event Seat">{{ eventLayout.typeIcons[col.type] }}</mat-icon></button>
-              <button *ngIf="col.type == 'active'" [matTooltip]="'seat : '+col.number+' ,cost : '+eventLayout.priceMap[col.price].value" class="seat-button" mat-icon-button><mat-icon [style.color]="eventLayout.priceMap[col.price].color" aria-label="Event Seat">{{ eventLayout.typeIcons[col.type] }}</mat-icon></button>
-            </td>
-          <tr>
-        </table>
-        <div class="screen-div">SCREEN HERE</div>
-      </mat-card-content>
-    </mat-card>
     <div>
-      <button mat-button (click)="upsertLayout()">UPSERT LAYOUT</button>
       <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="upsertLayout()">UPSERT LAYOUT</button>
     </div>
   </mat-step>
 </mat-horizontal-stepper>
